<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wangzhenyi.miracleinsperation.MainActivity" >


    <item
        android:id="@+id/action_deleted_items"
        android:orderInCategory="100"
        android:title="@string/action_deleted_items"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_select"
        android:orderInCategory="100"
        android:title="@string/action_select"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_generate_samples"
        android:orderInCategory="100"
        android:title="@string/action_generate_samples"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
